# padme-browser

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yaml  release.yaml
src/: audio.rs  cartridge.rs  emulator.rs  lcd.rs  lib.rs  serial.rs
www/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
www/public/: index.html  manifest.json
www/src/: bootstrap.js  declaration.d.ts  index.tsx  store.ts  utils.ts
www/src/app/: app.tsx
www/src/app/cartridge-info/: cartridge-info.scss  cartridge-info.tsx
www/src/app/help/: help.tsx
www/src/app/layout/: content.tsx  footer.tsx  header.tsx  index.ts  main-panel.tsx  side-panel.tsx
www/src/app/navbar/: navbar.tsx
www/src/app/serial-console/: serial-console.tsx  serial.state.ts
www/src/app/settings/: settings.state.ts  settings.tsx
www/src/components/: app.tsx
www/src/components/cartridge-info/: cartridge-info.scss  cartridge-info.tsx  index.ts
www/src/components/cartridge-loader/: cartridge-loader.scss  cartridge-loader.tsx  store.ts
www/src/components/controls/: control-action.tsx  control-dir.tsx  control-s.tsx  control.scss  control.tsx  index.ts
www/src/components/footer/: footer.scss  footer.tsx
www/src/components/fps/: fps.scss  fps.tsx  index.ts
www/src/components/game-section/: game-section.tsx  index.ts
www/src/style/: form.scss  icons.scss  index.scss  responsive.scss  variables.sass  variables.scss
www/src/utils/: index.ts  keycodes.ts  storage.ts
www/webpack/: common.js  dev.js  prod.js
(+52 files in other folders)
