[package]
name = "padme-wasm"
version = "0.1.0"
authors = ["Alex Ren <shaoner@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.56"
padme-core = { path = "./core" }
log = "0.4"
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "0.2", features = ["color"], optional = true }
cpal = { version = "0.13.5", features = ["wasm-bindgen"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
strip = true
opt-level = "s"
lto = true
